# media

./: Android.mk  CMakeLists.txt  README.md  build.sh  build_aosp.sh  build_linux.sh
common/: Android.mk  CMakeLists.txt
common/log/: MediaLog.cpp  MediaLog.h  MediaLogManager.cpp  MediaLogManager.h
common/prop/: Property.cpp  Property.h
video_codec/: ASharedBufferServer.rc  Android.mk  CMakeLists.txt  VideoCodecApi.cpp  VideoCodecApi.h  VideoCodecDefs.h  VideoEncoderCommon.cpp  VideoEncoderCommon.h  VideoEncoderNetint.cpp  VideoEncoderNetint.h  VideoEncoderOpenH264.cpp  VideoEncoderOpenH264.h  VideoEncoderQuadra.cpp  VideoEncoderQuadra.h  VideoEncoderVastai.cpp  VideoEncoderVastai.h  VideoEncoderVpe.cpp  VideoEncoderVpe.h
video_decoder/: Android.mk  VideoDecoderApi.cpp  VideoDecoderNetint.cpp  VideoDecoderNetint.h
video_decoder/include/: VideoDecoder.h
